--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.460.0",
     "next": "14.2.5",
     "prisma": "^5.19.1",
